<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_srvs</name>
  <version>1.0.0</version>
  <description>ROS2 services for images and segmentation</description>
  <author email="ronca.pat@gmail.com">Patrick Roncagliolo</author>
  <maintainer email="ronca.pat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>LGPLv3</license>
  
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
